docs/0.14/_sources/api/gammapy.modeling.models.ConstantSpatialModel.rst.txt
ConstantSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantSpatialModel.evaluation_radius
      ~ConstantSpatialModel.frame
      ~ConstantSpatialModel.parameters
      ~ConstantSpatialModel.position
      ~ConstantSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantSpatialModel.__call__
      ~ConstantSpatialModel.copy
      ~ConstantSpatialModel.create
      ~ConstantSpatialModel.evaluate
      ~ConstantSpatialModel.evaluate_geom
      ~ConstantSpatialModel.from_dict
      ~ConstantSpatialModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: to_dict
